array.island.Island.scala.error
Erreur de compilation :
Island:7: error: reassignment to val
      b=b+1
       ^